--- a/src/index.html
+++ b/src/index.html
@@ -1,173 +1,24 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simple Chocolate</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
-    />
-    <link rel="icon" type="image/svg+xml" href="./imgs/favicon.svg" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/intl-tel-input@18.1.1/build/css/intlTelInput.css"
-    />
-    <link href="https://vjs.zencdn.net/8.3.0/video-js.css" rel="stylesheet" />
-    <link
-      href="https://unpkg.com/@videojs/themes@1/dist/forest/index.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      rel="stylesheet"
-      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
-    />
-    <link rel="stylesheet" href="./sass/main.scss" />
-    <script type="module" src="./index.js"></script>
+    <title>Vanilla App Template</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <include src="./partials/preloader.html"></include>
-    <include src="./partials/header.html"></include>
-    <include src="./partials/hero.html"></include>
-    <include src="./partials/benefits.html"></include>
-    <include src="./partials/additives.html"></include>
-    <include src="./partials/production.html"></include>
-    <include src="./partials/products.html"></include>
-    <include src="./partials/sellers.html"></include>
-    <include src="./partials/reviews.html"></include>
-    <include src="./partials/advertising.html"></include>
-    <include src="./partials/footer.html"></include>
-    <include src="./partials/scroll-to-top.html"></include>
-    <include src="./partials/buy-now-modal.html"></include>
-    <include src="./partials/review-modal.html"></include>
-    <include src="./partials/burger-modal.html"></include>
-    <include src="./partials/discount.html"></include>
-    <include src="./partials/thanks.html"></include>
-    <include src="./partials/mailing-modal.html"></include>    
+    <load ="partials/header.html" />
 
-    <!-- Scripts -->
+    <section>
+      <h1>Example page title</h1>
+      <!-- Path to images as from index.html file -->
+      <img src="./img/javascript.svg" alt="" />
+    </section>
 
-    <script src="./js/preloader.js" type="module"></script>
-    <script src="//code.jquery.com/jquery-3.7.0.min.js"></script>
-    <script
-      type="text/javascript"
-      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
-    ></script>
-    <script src="./js/scroll-to-top.js"></script>
-    <script src="./js/buy-now.js" type="module"></script>
-    <script src="./js/cards.js" type="module"></script>
-    <script src="./js/ms.js" type="module"></script>
-    <script type="module" src="./js/slick.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <script src="./js/burger.js" type="module"></script>
-    <script src="./js/review-modal.js" type="module"></script>
-    <script src="./js/discount.js" type="module"></script>
-    <script src="./js/thanks.js" type="module"></script>
-    <script src="./js/hero-btn.js" type="module"></script>
-    <script src="./js/video.js" type="module"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script type="module" src="./js/share.js"></script>
-    <script type="module" src="./js/swiper.js"></script>
-    <script type="module" src="./js/mailing-modal.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@18.1.1/build/js/intlTelInput.min.js"></script>
-    <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script>
-    <script type="module">
-      var input = document.querySelector('#phone1');
-      window.intlTelInput(input, {
-        utilsScript:
-          'https://cdn.jsdelivr.net/npm/intl-tel-input@18.1.1/build/js/utils.js',
-        separateDialCode: true,
-        initialCountry: 'ua',
-        excludeCountries: ['ru', 'by'],
-        customPlaceholder: true,
-        onlyCountries: [
-          'ua',
-          'at',
-          'bg',
-          'hu',
-          'de',
-          'gr',
-          'dk',
-          'ie',
-          'es',
-          'it',
-          'cy',
-          'lv',
-          'lt',
-          'lu',
-          'mt',
-          'nl',
-          'pl',
-          'pg',
-          'ro',
-          'sk',
-          'si',
-          'fi',
-          'hr',
-          'cz',
-          'se',
-          'ee',
-        ],
-      });
-    </script>
-    <script type="module">
-      var input = document.querySelector('#phone2');
-      window.intlTelInput(input, {
-        utilsScript:
-          'https://cdn.jsdelivr.net/npm/intl-tel-input@18.1.1/build/js/utils.js',
-        separateDialCode: true,
-        initialCountry: 'ua',
-        excludeCountries: ['ru', 'by'],
-        customPlaceholder: true,
-        onlyCountries: [
-          'ua',
-          'at',
-          'bg',
-          'hu',
-          'de',
-          'gr',
-          'dk',
-          'ie',
-          'es',
-          'it',
-          'cy',
-          'lv',
-          'lt',
-          'lu',
-          'mt',
-          'nl',
-          'pl',
-          'pg',
-          'ro',
-          'sk',
-          'si',
-          'fi',
-          'hr',
-          'cz',
-          'se',
-          'ee',
-        ],
-      });
-    </script>
+    <!-- Loads the specified .html file -->
+    <load ="partials/vite-promo.html" />
+
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
